--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,159 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('http://fonts.cdnfonts.com/css/sega-logo-font');
+
+*{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: rgb(39, 39, 48);
+  color: white;
+  margin: 0;
+}
+
+
+.root{
+  display: flex;
+  flex: column;
+  justify-content: flex-end;
+}
+
+header{
+  background-color: rgb(31, 31, 41);
+  color: rgb(105, 99, 99);
+  justify-content: space-between;
+  display: flex;
+  padding: 0 3rem;
+}
+
+header h1{
+  font-family: 'SEGA LOGO FONT', sans-serif;  
+  letter-spacing: 1.5px;
+  font-weight: lighter;
+  font-size: 2.5rem;    
+
+}
+
+header h1 span, .footer p{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1rem;
+  padding: 0 10px;
+  
+}
+.movie-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.movie{
+  width: 280px;
+  margin: 1rem;
+  background-color: #373b69;
+  box-shadow: 3px 3px 5px gba(0,0,0,0.1);
+  border-radius: 3px;
+  position: relative;
+  overflow: hidden;
+}
+
+
+
+.movie img{
+  width: 100%;
+}
+
+
+.movie-info{
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+.movie-info h3{
+  margin: 0;
+}
+
+.movie-over{
+  background-color:#3c3f46;
+  color: white;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+  line-height: 20px;
+}
+
+.movie:hover .movie-over{
+  transform: translateX(0%);
+}
+
+
+
+form{
+  height: 100%;
+  margin:auto 2px;
+}
+
+.search{
+  border: 2px;
+  font-family: inherit;
+  border-radius: 50px;
+  color: rgb(171, 171, 199);
+  border: 2px solid rgb(67, 67, 73);
+  background-color: transparent;
+  font-size: 1.2rem;
+  padding: 0.5em 1.5rem;
+  right: 10px;
+  margin: 1rem;
+}
+
+.tag{
+  background-color: #19191a;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
+.tag.green {
+  color: rgb(147, 248, 147);
+}
+
+.tag.orange{
+  color: rgb(228, 216, 109);
+}
+
+.footer{
+  background-color: #31313a;
+  justify-content: center;
+  text-align: center;
+  min-height: 100px;
+  padding: 10px;
+  color: rgb(124, 121, 121);
+  margin: 1rem;
+}
+
+.footer p{
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  padding: 10px;
+
+
+}
+
+.footer img{
+  max-width: 50px;
+}
+
+@media (max-width:991.98px){
+  header{
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
 }
